--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #ff000062;
+    --cor-de-fundo: #ff0000;
     --verde: #fae100;
     --branco: #FFFFFF;
     --botao-ativo: #ff9900;
